// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders EuiColorStops 1`] = `
<div
  aria-label="aria-label"
  class="euiRangeWrapper euiColorStops testClass1 testClass2 emotion-euiRangeWrapper-regular-euiColorStops-isEnabled-euiTestCss"
  data-test-subj="euiColorStops test subject string"
  tabindex="0"
>
  <p
    aria-live="polite"
    class="emotion-euiScreenReaderOnly"
  >
    Test:   Color stop picker. Each stop consists of a number and corresponding color value. Use the Down and Up arrow keys to select individual stops. Press the Enter key to create a new stop.
  </p>
  <div
    class="euiRangeTrack euiColorStops__track emotion-euiRangeTrack-euiColorStops__track"
  >
    <div
      class="euiRangeHighlight euiColorStops__highlight emotion-euiRangeHighlight"
    >
      <div
        class="euiRangeHighlight__progress emotion-euiRangeHighlight__progress"
        data-test-subj="euiRangeHighlightProgress"
        style="margin-inline-start: 0%; inline-size: 100%;"
      />
    </div>
    <div
      class="euiColorStops__addContainer emotion-euiColorStopsAddContainer-isEnabled"
      data-test-subj="euiColorStopsAdd"
    >
      <div
        class="euiColorStops__addTarget emotion-euiColorStops__addTarget"
        style="left: 0%;"
      />
    </div>
    <div
      class="euiPopover euiColorStopPopover emotion-euiPopover-euiColorStopThumbPopover"
      style="left: 0%;"
    >
      <div
        class="euiPopover__anchor euiColorStopThumbPopover__anchor css-16vtueo-render"
      >
        <button
          aria-disabled="false"
          aria-label="Press the Enter key to modify this stop. Press Escape to focus the group"
          aria-valuemax="24"
          aria-valuemin="0"
          aria-valuenow="0"
          aria-valuetext="Stop: 0, Color: #FF0000 (1 of 3)"
          class="euiRangeThumb euiColorStopThumb emotion-euiRangeThumb-euiColorStopThumb"
          data-index="euiColorStop_0"
          data-test-subj="euiColorStopThumb"
          role="slider"
          style="background: rgb(255, 0, 0);"
          tabindex="-1"
          title="Click to edit, drag to reposition"
          type="button"
        />
      </div>
    </div>
    <div
      class="euiPopover euiColorStopPopover emotion-euiPopover-euiColorStopThumbPopover"
      style="left: 21%;"
    >
      <div
        class="euiPopover__anchor euiColorStopThumbPopover__anchor css-16vtueo-render"
      >
        <button
          aria-disabled="false"
          aria-label="Press the Enter key to modify this stop. Press Escape to focus the group"
          aria-valuemax="34"
          aria-valuemin="1"
          aria-valuenow="25"
          aria-valuetext="Stop: 25, Color: #00FF00 (2 of 3)"
          class="euiRangeThumb euiColorStopThumb emotion-euiRangeThumb-euiColorStopThumb"
          data-index="euiColorStop_1"
          data-test-subj="euiColorStopThumb"
          role="slider"
          style="background: rgb(0, 255, 0);"
          tabindex="-1"
          title="Click to edit, drag to reposition"
          type="button"
        />
      </div>
    </div>
    <div
      class="euiPopover euiColorStopPopover emotion-euiPopover-euiColorStopThumbPopover"
      style="left: 29.4%;"
    >
      <div
        class="euiPopover__anchor euiColorStopThumbPopover__anchor css-16vtueo-render"
      >
        <button
          aria-disabled="false"
          aria-label="Press the Enter key to modify this stop. Press Escape to focus the group"
          aria-valuemax="100"
          aria-valuemin="26"
          aria-valuenow="35"
          aria-valuetext="Stop: 35, Color: #0000FF (3 of 3)"
          class="euiRangeThumb euiColorStopThumb emotion-euiRangeThumb-euiColorStopThumb"
          data-index="euiColorStop_2"
          data-test-subj="euiColorStopThumb"
          role="slider"
          style="background: rgb(0, 0, 255);"
          tabindex="-1"
          title="Click to edit, drag to reposition"
          type="button"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`renders compressed EuiColorStops 1`] = `
<div
  aria-label="aria-label"
  class="euiRangeWrapper euiColorStops testClass1 testClass2 emotion-euiRangeWrapper-regular-euiColorStops-isEnabled-euiTestCss"
  data-test-subj="euiColorStops test subject string"
  tabindex="0"
>
  <p
    aria-live="polite"
    class="emotion-euiScreenReaderOnly"
  >
    Test:   Color stop picker. Each stop consists of a number and corresponding color value. Use the Down and Up arrow keys to select individual stops. Press the Enter key to create a new stop.
  </p>
  <div
    class="euiRangeTrack euiColorStops__track emotion-euiRangeTrack-euiColorStops__track"
  >
    <div
      class="euiRangeHighlight euiColorStops__highlight emotion-euiRangeHighlight"
    >
      <div
        class="euiRangeHighlight__progress emotion-euiRangeHighlight__progress"
        data-test-subj="euiRangeHighlightProgress"
        style="margin-inline-start: 0%; inline-size: 100%;"
      />
    </div>
    <div
      class="euiColorStops__addContainer emotion-euiColorStopsAddContainer-isEnabled"
      data-test-subj="euiColorStopsAdd"
    >
      <div
        class="euiColorStops__addTarget emotion-euiColorStops__addTarget"
        style="left: 0%;"
      />
    </div>
    <div
      class="euiPopover euiColorStopPopover emotion-euiPopover-euiColorStopThumbPopover"
      style="left: 0%;"
    >
      <div
        class="euiPopover__anchor euiColorStopThumbPopover__anchor css-16vtueo-render"
      >
        <button
          aria-disabled="false"
          aria-label="Press the Enter key to modify this stop. Press Escape to focus the group"
          aria-valuemax="24"
          aria-valuemin="0"
          aria-valuenow="0"
          aria-valuetext="Stop: 0, Color: #FF0000 (1 of 3)"
          class="euiRangeThumb euiColorStopThumb emotion-euiRangeThumb-euiColorStopThumb"
          data-index="euiColorStop_0"
          data-test-subj="euiColorStopThumb"
          role="slider"
          style="background: rgb(255, 0, 0);"
          tabindex="-1"
          title="Click to edit, drag to reposition"
          type="button"
        />
      </div>
    </div>
    <div
      class="euiPopover euiColorStopPopover emotion-euiPopover-euiColorStopThumbPopover"
      style="left: 21%;"
    >
      <div
        class="euiPopover__anchor euiColorStopThumbPopover__anchor css-16vtueo-render"
      >
        <button
          aria-disabled="false"
          aria-label="Press the Enter key to modify this stop. Press Escape to focus the group"
          aria-valuemax="34"
          aria-valuemin="1"
          aria-valuenow="25"
          aria-valuetext="Stop: 25, Color: #00FF00 (2 of 3)"
          class="euiRangeThumb euiColorStopThumb emotion-euiRangeThumb-euiColorStopThumb"
          data-index="euiColorStop_1"
          data-test-subj="euiColorStopThumb"
          role="slider"
          style="background: rgb(0, 255, 0);"
          tabindex="-1"
          title="Click to edit, drag to reposition"
          type="button"
        />
      </div>
    </div>
    <div
      class="euiPopover euiColorStopPopover emotion-euiPopover-euiColorStopThumbPopover"
      style="left: 29.4%;"
    >
      <div
        class="euiPopover__anchor euiColorStopThumbPopover__anchor css-16vtueo-render"
      >
        <button
          aria-disabled="false"
          aria-label="Press the Enter key to modify this stop. Press Escape to focus the group"
          aria-valuemax="100"
          aria-valuemin="26"
          aria-valuenow="35"
          aria-valuetext="Stop: 35, Color: #0000FF (3 of 3)"
          class="euiRangeThumb euiColorStopThumb emotion-euiRangeThumb-euiColorStopThumb"
          data-index="euiColorStop_2"
          data-test-subj="euiColorStopThumb"
          role="slider"
          style="background: rgb(0, 0, 255);"
          tabindex="-1"
          title="Click to edit, drag to reposition"
          type="button"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`renders disabled EuiColorStops 1`] = `
<div
  aria-label="aria-label"
  class="euiRangeWrapper euiColorStops testClass1 testClass2 emotion-euiRangeWrapper-regular-euiColorStops-isDisabled-euiTestCss"
  data-test-subj="euiColorStops test subject string"
  tabindex="-1"
>
  <p
    aria-live="polite"
    class="emotion-euiScreenReaderOnly"
  >
    Test:  Disabled. Color stop picker. Each stop consists of a number and corresponding color value. Use the Down and Up arrow keys to select individual stops. Press the Enter key to create a new stop.
  </p>
  <div
    class="euiRangeTrack euiColorStops__track emotion-euiRangeTrack-disabled-euiColorStops__track"
  >
    <div
      class="euiRangeHighlight euiColorStops__highlight emotion-euiRangeHighlight"
    >
      <div
        class="euiRangeHighlight__progress emotion-euiRangeHighlight__progress"
        data-test-subj="euiRangeHighlightProgress"
        style="margin-inline-start: 0%; inline-size: 100%;"
      />
    </div>
    <div
      class="euiColorStops__addContainer emotion-euiColorStopsAddContainer-isDisabled"
      data-test-subj="euiColorStopsAdd"
    >
      <div
        class="euiColorStops__addTarget emotion-euiColorStops__addTarget"
        style="left: 0%;"
      />
    </div>
    <div
      class="euiPopover euiColorStopPopover emotion-euiPopover-euiColorStopThumbPopover"
      style="left: 0%;"
    >
      <div
        class="euiPopover__anchor euiColorStopThumbPopover__anchor css-16vtueo-render"
      >
        <button
          aria-disabled="true"
          aria-label="Press the Enter key to modify this stop. Press Escape to focus the group"
          aria-valuemax="24"
          aria-valuemin="0"
          aria-valuenow="0"
          aria-valuetext="Stop: 0, Color: #FF0000 (1 of 3)"
          class="euiRangeThumb euiColorStopThumb emotion-euiRangeThumb-euiColorStopThumb"
          data-index="euiColorStop_0"
          data-test-subj="euiColorStopThumb"
          disabled=""
          role="slider"
          style="background: rgb(255, 0, 0);"
          tabindex="-1"
          title="Click to edit, drag to reposition"
          type="button"
        />
      </div>
    </div>
    <div
      class="euiPopover euiColorStopPopover emotion-euiPopover-euiColorStopThumbPopover"
      style="left: 21%;"
    >
      <div
        class="euiPopover__anchor euiColorStopThumbPopover__anchor css-16vtueo-render"
      >
        <button
          aria-disabled="true"
          aria-label="Press the Enter key to modify this stop. Press Escape to focus the group"
          aria-valuemax="34"
          aria-valuemin="1"
          aria-valuenow="25"
          aria-valuetext="Stop: 25, Color: #00FF00 (2 of 3)"
          class="euiRangeThumb euiColorStopThumb emotion-euiRangeThumb-euiColorStopThumb"
          data-index="euiColorStop_1"
          data-test-subj="euiColorStopThumb"
          disabled=""
          role="slider"
          style="background: rgb(0, 255, 0);"
          tabindex="-1"
          title="Click to edit, drag to reposition"
          type="button"
        />
      </div>
    </div>
    <div
      class="euiPopover euiColorStopPopover emotion-euiPopover-euiColorStopThumbPopover"
      style="left: 29.4%;"
    >
      <div
        class="euiPopover__anchor euiColorStopThumbPopover__anchor css-16vtueo-render"
      >
        <button
          aria-disabled="true"
          aria-label="Press the Enter key to modify this stop. Press Escape to focus the group"
          aria-valuemax="100"
          aria-valuemin="26"
          aria-valuenow="35"
          aria-valuetext="Stop: 35, Color: #0000FF (3 of 3)"
          class="euiRangeThumb euiColorStopThumb emotion-euiRangeThumb-euiColorStopThumb"
          data-index="euiColorStop_2"
          data-test-subj="euiColorStopThumb"
          disabled=""
          role="slider"
          style="background: rgb(0, 0, 255);"
          tabindex="-1"
          title="Click to edit, drag to reposition"
          type="button"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`renders empty EuiColorStops 1`] = `
<div
  aria-label="aria-label"
  class="euiRangeWrapper euiColorStops testClass1 testClass2 emotion-euiRangeWrapper-regular-euiColorStops-isEnabled-euiTestCss"
  data-test-subj="euiColorStops test subject string"
  tabindex="0"
>
  <p
    aria-live="polite"
    class="emotion-euiScreenReaderOnly"
  >
    Test:   Color stop picker. Each stop consists of a number and corresponding color value. Use the Down and Up arrow keys to select individual stops. Press the Enter key to create a new stop.
  </p>
  <div
    class="euiRangeTrack euiColorStops__track emotion-euiRangeTrack-euiColorStops__track"
  >
    <div
      class="euiRangeHighlight euiColorStops__highlight emotion-euiRangeHighlight"
    >
      <div
        class="euiRangeHighlight__progress emotion-euiRangeHighlight__progress"
        data-test-subj="euiRangeHighlightProgress"
        style="margin-inline-start: 0%; inline-size: 100%;"
      />
    </div>
    <div
      class="euiColorStops__addContainer emotion-euiColorStopsAddContainer-isEnabled"
      data-test-subj="euiColorStopsAdd"
    >
      <div
        class="euiColorStops__addTarget emotion-euiColorStops__addTarget"
        style="left: 0%;"
      />
    </div>
  </div>
</div>
`;

exports[`renders fixed stop EuiColorStops 1`] = `
<div
  aria-label="aria-label"
  class="euiRangeWrapper euiColorStops testClass1 testClass2 emotion-euiRangeWrapper-regular-euiColorStops-isEnabled-euiTestCss"
  data-test-subj="euiColorStops test subject string"
  tabindex="0"
>
  <p
    aria-live="polite"
    class="emotion-euiScreenReaderOnly"
  >
    Test:   Color stop picker. Each stop consists of a number and corresponding color value. Use the Down and Up arrow keys to select individual stops. Press the Enter key to create a new stop.
  </p>
  <div
    class="euiRangeTrack euiColorStops__track emotion-euiRangeTrack-euiColorStops__track"
  >
    <div
      class="euiRangeHighlight euiColorStops__highlight emotion-euiRangeHighlight"
    >
      <div
        class="euiRangeHighlight__progress emotion-euiRangeHighlight__progress"
        data-test-subj="euiRangeHighlightProgress"
        style="margin-inline-start: 0%; inline-size: 100%;"
      />
    </div>
    <div
      class="euiColorStops__addContainer emotion-euiColorStopsAddContainer-isEnabled"
      data-test-subj="euiColorStopsAdd"
    >
      <div
        class="euiColorStops__addTarget emotion-euiColorStops__addTarget"
        style="left: 0%;"
      />
    </div>
    <div
      class="euiPopover euiColorStopPopover emotion-euiPopover-euiColorStopThumbPopover"
      style="left: 0%;"
    >
      <div
        class="euiPopover__anchor euiColorStopThumbPopover__anchor css-16vtueo-render"
      >
        <button
          aria-disabled="false"
          aria-label="Press the Enter key to modify this stop. Press Escape to focus the group"
          aria-valuemax="24"
          aria-valuemin="0"
          aria-valuenow="0"
          aria-valuetext="Stop: 0, Color: #FF0000 (1 of 3)"
          class="euiRangeThumb euiColorStopThumb emotion-euiRangeThumb-euiColorStopThumb"
          data-index="euiColorStop_0"
          data-test-subj="euiColorStopThumb"
          role="slider"
          style="background: rgb(255, 0, 0);"
          tabindex="-1"
          title="Click to edit, drag to reposition"
          type="button"
        />
      </div>
    </div>
    <div
      class="euiPopover euiColorStopPopover emotion-euiPopover-euiColorStopThumbPopover"
      style="left: 21%;"
    >
      <div
        class="euiPopover__anchor euiColorStopThumbPopover__anchor css-16vtueo-render"
      >
        <button
          aria-disabled="false"
          aria-label="Press the Enter key to modify this stop. Press Escape to focus the group"
          aria-valuemax="34"
          aria-valuemin="1"
          aria-valuenow="25"
          aria-valuetext="Stop: 25, Color: #00FF00 (2 of 3)"
          class="euiRangeThumb euiColorStopThumb emotion-euiRangeThumb-euiColorStopThumb"
          data-index="euiColorStop_1"
          data-test-subj="euiColorStopThumb"
          role="slider"
          style="background: rgb(0, 255, 0);"
          tabindex="-1"
          title="Click to edit, drag to reposition"
          type="button"
        />
      </div>
    </div>
    <div
      class="euiPopover euiColorStopPopover emotion-euiPopover-euiColorStopThumbPopover"
      style="left: 29.4%;"
    >
      <div
        class="euiPopover__anchor euiColorStopThumbPopover__anchor css-16vtueo-render"
      >
        <button
          aria-disabled="false"
          aria-label="Press the Enter key to modify this stop. Press Escape to focus the group"
          aria-valuemax="100"
          aria-valuemin="26"
          aria-valuenow="35"
          aria-valuetext="Stop: 35, Color: #0000FF (3 of 3)"
          class="euiRangeThumb euiColorStopThumb emotion-euiRangeThumb-euiColorStopThumb"
          data-index="euiColorStop_2"
          data-test-subj="euiColorStopThumb"
          role="slider"
          style="background: rgb(0, 0, 255);"
          tabindex="-1"
          title="Click to edit, drag to reposition"
          type="button"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`renders free-range EuiColorStops 1`] = `
<div
  aria-label="aria-label"
  class="euiRangeWrapper euiColorStops testClass1 testClass2 emotion-euiRangeWrapper-regular-euiColorStops-isEnabled-euiTestCss"
  data-test-subj="euiColorStops test subject string"
  tabindex="0"
>
  <p
    aria-live="polite"
    class="emotion-euiScreenReaderOnly"
  >
    Test:   Color stop picker. Each stop consists of a number and corresponding color value. Use the Down and Up arrow keys to select individual stops. Press the Enter key to create a new stop.
  </p>
  <div
    class="euiRangeTrack euiColorStops__track emotion-euiRangeTrack-euiColorStops__track"
  >
    <div
      class="euiRangeHighlight euiColorStops__highlight emotion-euiRangeHighlight"
    >
      <div
        class="euiRangeHighlight__progress emotion-euiRangeHighlight__progress"
        data-test-subj="euiRangeHighlightProgress"
        style="margin-inline-start: 0%; inline-size: 100%;"
      />
    </div>
    <div
      class="euiColorStops__addContainer emotion-euiColorStopsAddContainer-isEnabled"
      data-test-subj="euiColorStopsAdd"
    >
      <div
        class="euiColorStops__addTarget emotion-euiColorStops__addTarget"
        style="left: 0%;"
      />
    </div>
  </div>
</div>
`;

exports[`renders fullWidth EuiColorStops 1`] = `
<div
  aria-label="aria-label"
  class="euiRangeWrapper euiColorStops testClass1 testClass2 emotion-euiRangeWrapper-regular-fullWidth-euiColorStops-isEnabled-euiTestCss"
  data-test-subj="euiColorStops test subject string"
  tabindex="0"
>
  <p
    aria-live="polite"
    class="emotion-euiScreenReaderOnly"
  >
    Test:   Color stop picker. Each stop consists of a number and corresponding color value. Use the Down and Up arrow keys to select individual stops. Press the Enter key to create a new stop.
  </p>
  <div
    class="euiRangeTrack euiColorStops__track emotion-euiRangeTrack-euiColorStops__track"
  >
    <div
      class="euiRangeHighlight euiColorStops__highlight emotion-euiRangeHighlight"
    >
      <div
        class="euiRangeHighlight__progress emotion-euiRangeHighlight__progress"
        data-test-subj="euiRangeHighlightProgress"
        style="margin-inline-start: 0%; inline-size: 100%;"
      />
    </div>
    <div
      class="euiColorStops__addContainer emotion-euiColorStopsAddContainer-isEnabled"
      data-test-subj="euiColorStopsAdd"
    >
      <div
        class="euiColorStops__addTarget emotion-euiColorStops__addTarget"
        style="left: 0%;"
      />
    </div>
    <div
      class="euiPopover euiColorStopPopover emotion-euiPopover-euiColorStopThumbPopover"
      style="left: 0%;"
    >
      <div
        class="euiPopover__anchor euiColorStopThumbPopover__anchor css-16vtueo-render"
      >
        <button
          aria-disabled="false"
          aria-label="Press the Enter key to modify this stop. Press Escape to focus the group"
          aria-valuemax="24"
          aria-valuemin="0"
          aria-valuenow="0"
          aria-valuetext="Stop: 0, Color: #FF0000 (1 of 3)"
          class="euiRangeThumb euiColorStopThumb emotion-euiRangeThumb-euiColorStopThumb"
          data-index="euiColorStop_0"
          data-test-subj="euiColorStopThumb"
          role="slider"
          style="background: rgb(255, 0, 0);"
          tabindex="-1"
          title="Click to edit, drag to reposition"
          type="button"
        />
      </div>
    </div>
    <div
      class="euiPopover euiColorStopPopover emotion-euiPopover-euiColorStopThumbPopover"
      style="left: 21%;"
    >
      <div
        class="euiPopover__anchor euiColorStopThumbPopover__anchor css-16vtueo-render"
      >
        <button
          aria-disabled="false"
          aria-label="Press the Enter key to modify this stop. Press Escape to focus the group"
          aria-valuemax="34"
          aria-valuemin="1"
          aria-valuenow="25"
          aria-valuetext="Stop: 25, Color: #00FF00 (2 of 3)"
          class="euiRangeThumb euiColorStopThumb emotion-euiRangeThumb-euiColorStopThumb"
          data-index="euiColorStop_1"
          data-test-subj="euiColorStopThumb"
          role="slider"
          style="background: rgb(0, 255, 0);"
          tabindex="-1"
          title="Click to edit, drag to reposition"
          type="button"
        />
      </div>
    </div>
    <div
      class="euiPopover euiColorStopPopover emotion-euiPopover-euiColorStopThumbPopover"
      style="left: 29.4%;"
    >
      <div
        class="euiPopover__anchor euiColorStopThumbPopover__anchor css-16vtueo-render"
      >
        <button
          aria-disabled="false"
          aria-label="Press the Enter key to modify this stop. Press Escape to focus the group"
          aria-valuemax="100"
          aria-valuemin="26"
          aria-valuenow="35"
          aria-valuetext="Stop: 35, Color: #0000FF (3 of 3)"
          class="euiRangeThumb euiColorStopThumb emotion-euiRangeThumb-euiColorStopThumb"
          data-index="euiColorStop_2"
          data-test-subj="euiColorStopThumb"
          role="slider"
          style="background: rgb(0, 0, 255);"
          tabindex="-1"
          title="Click to edit, drag to reposition"
          type="button"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`renders max-only EuiColorStops 1`] = `
<div
  aria-label="aria-label"
  class="euiRangeWrapper euiColorStops testClass1 testClass2 emotion-euiRangeWrapper-regular-euiColorStops-isEnabled-euiTestCss"
  data-test-subj="euiColorStops test subject string"
  tabindex="0"
>
  <p
    aria-live="polite"
    class="emotion-euiScreenReaderOnly"
  >
    Test:   Color stop picker. Each stop consists of a number and corresponding color value. Use the Down and Up arrow keys to select individual stops. Press the Enter key to create a new stop.
  </p>
  <div
    class="euiRangeTrack euiColorStops__track emotion-euiRangeTrack-euiColorStops__track"
  >
    <div
      class="euiRangeHighlight euiColorStops__highlight emotion-euiRangeHighlight"
    >
      <div
        class="euiRangeHighlight__progress emotion-euiRangeHighlight__progress"
        data-test-subj="euiRangeHighlightProgress"
        style="margin-inline-start: 0%; inline-size: 100%;"
      />
    </div>
    <div
      class="euiColorStops__addContainer emotion-euiColorStopsAddContainer-isEnabled"
      data-test-subj="euiColorStopsAdd"
    >
      <div
        class="euiColorStops__addTarget emotion-euiColorStops__addTarget"
        style="left: 0%;"
      />
    </div>
  </div>
</div>
`;

exports[`renders min-only EuiColorStops 1`] = `
<div
  aria-label="aria-label"
  class="euiRangeWrapper euiColorStops testClass1 testClass2 emotion-euiRangeWrapper-regular-euiColorStops-isEnabled-euiTestCss"
  data-test-subj="euiColorStops test subject string"
  tabindex="0"
>
  <p
    aria-live="polite"
    class="emotion-euiScreenReaderOnly"
  >
    Test:   Color stop picker. Each stop consists of a number and corresponding color value. Use the Down and Up arrow keys to select individual stops. Press the Enter key to create a new stop.
  </p>
  <div
    class="euiRangeTrack euiColorStops__track emotion-euiRangeTrack-euiColorStops__track"
  >
    <div
      class="euiRangeHighlight euiColorStops__highlight emotion-euiRangeHighlight"
    >
      <div
        class="euiRangeHighlight__progress emotion-euiRangeHighlight__progress"
        data-test-subj="euiRangeHighlightProgress"
        style="margin-inline-start: 0%; inline-size: 100%;"
      />
    </div>
    <div
      class="euiColorStops__addContainer emotion-euiColorStopsAddContainer-isEnabled"
      data-test-subj="euiColorStopsAdd"
    >
      <div
        class="euiColorStops__addTarget emotion-euiColorStops__addTarget"
        style="left: 0%;"
      />
    </div>
  </div>
</div>
`;

exports[`renders readOnly EuiColorStops 1`] = `
<div
  aria-label="aria-label"
  class="euiRangeWrapper euiColorStops testClass1 testClass2 emotion-euiRangeWrapper-regular-euiColorStops-isEnabled-isReadOnly-euiTestCss"
  data-test-subj="euiColorStops test subject string"
  tabindex="0"
>
  <p
    aria-live="polite"
    class="emotion-euiScreenReaderOnly"
  >
    Test: Read-only.  Color stop picker. Each stop consists of a number and corresponding color value. Use the Down and Up arrow keys to select individual stops. Press the Enter key to create a new stop.
  </p>
  <div
    class="euiRangeTrack euiColorStops__track emotion-euiRangeTrack-euiColorStops__track"
  >
    <div
      class="euiRangeHighlight euiColorStops__highlight emotion-euiRangeHighlight"
    >
      <div
        class="euiRangeHighlight__progress emotion-euiRangeHighlight__progress"
        data-test-subj="euiRangeHighlightProgress"
        style="margin-inline-start: 0%; inline-size: 100%;"
      />
    </div>
    <div
      class="euiColorStops__addContainer emotion-euiColorStopsAddContainer-isDisabled"
      data-test-subj="euiColorStopsAdd"
    >
      <div
        class="euiColorStops__addTarget emotion-euiColorStops__addTarget"
        style="left: 0%;"
      />
    </div>
    <div
      class="euiPopover euiColorStopPopover emotion-euiPopover-euiColorStopThumbPopover"
      style="left: 0%;"
    >
      <div
        class="euiPopover__anchor euiColorStopThumbPopover__anchor css-16vtueo-render"
      >
        <button
          aria-disabled="false"
          aria-label="Press the Enter key to modify this stop. Press Escape to focus the group"
          aria-valuemax="24"
          aria-valuemin="0"
          aria-valuenow="0"
          aria-valuetext="Stop: 0, Color: #FF0000 (1 of 3)"
          class="euiRangeThumb euiColorStopThumb emotion-euiRangeThumb-euiColorStopThumb"
          data-index="euiColorStop_0"
          data-test-subj="euiColorStopThumb"
          role="slider"
          style="background: rgb(255, 0, 0);"
          tabindex="-1"
          title="Click to edit, drag to reposition"
          type="button"
        />
      </div>
    </div>
    <div
      class="euiPopover euiColorStopPopover emotion-euiPopover-euiColorStopThumbPopover"
      style="left: 21%;"
    >
      <div
        class="euiPopover__anchor euiColorStopThumbPopover__anchor css-16vtueo-render"
      >
        <button
          aria-disabled="false"
          aria-label="Press the Enter key to modify this stop. Press Escape to focus the group"
          aria-valuemax="34"
          aria-valuemin="1"
          aria-valuenow="25"
          aria-valuetext="Stop: 25, Color: #00FF00 (2 of 3)"
          class="euiRangeThumb euiColorStopThumb emotion-euiRangeThumb-euiColorStopThumb"
          data-index="euiColorStop_1"
          data-test-subj="euiColorStopThumb"
          role="slider"
          style="background: rgb(0, 255, 0);"
          tabindex="-1"
          title="Click to edit, drag to reposition"
          type="button"
        />
      </div>
    </div>
    <div
      class="euiPopover euiColorStopPopover emotion-euiPopover-euiColorStopThumbPopover"
      style="left: 29.4%;"
    >
      <div
        class="euiPopover__anchor euiColorStopThumbPopover__anchor css-16vtueo-render"
      >
        <button
          aria-disabled="false"
          aria-label="Press the Enter key to modify this stop. Press Escape to focus the group"
          aria-valuemax="100"
          aria-valuemin="26"
          aria-valuenow="35"
          aria-valuetext="Stop: 35, Color: #0000FF (3 of 3)"
          class="euiRangeThumb euiColorStopThumb emotion-euiRangeThumb-euiColorStopThumb"
          data-index="euiColorStop_2"
          data-test-subj="euiColorStopThumb"
          role="slider"
          style="background: rgb(0, 0, 255);"
          tabindex="-1"
          title="Click to edit, drag to reposition"
          type="button"
        />
      </div>
    </div>
  </div>
</div>
`;
